Add new logo images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <h1>
     Welcome to {{title}}!
   </h1>
-  <img width="300" alt="tracker logo" src="../assets/logo.png">
+  <img width="300" alt="tracker logo" src="https://lh3.googleusercontent.com/3oSoo3ulm-3gZJb77cuJb66TwzdGrSfmQG8KqYuc6OxUPaKYUZEQkh3LT-FAlHfb=w300">
 </div>
 <br>
 <!--End of header-->
