--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,39 @@
 <!--Start of header-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!
-  </h1>
-  <img width="300" alt="tracker logo" src="https://lh3.googleusercontent.com/3oSoo3ulm-3gZJb77cuJb66TwzdGrSfmQG8KqYuc6OxUPaKYUZEQkh3LT-FAlHfb=w300">
+<div class="jumbotron">
+  <div style="text-align:center">
+    <h1>
+      Welcome to {{title}}!
+    </h1>
+    <img width="300" alt="tracker logo" src="https://lh3.googleusercontent.com/3oSoo3ulm-3gZJb77cuJb66TwzdGrSfmQG8KqYuc6OxUPaKYUZEQkh3LT-FAlHfb=w300">
+  </div>
+  <br>
 </div>
-<br>
 <!--End of header-->
 <!--Start of body-->
-<div style="text-align:center">
-  <form class="" action="index.html" method="post">
-    <input type="text" name="food name" placeholder="food name">
-    <input  type="button" value="Add" onClick="">
-  </form>
-  <br>
-  <form class="" action="index.html" method="post">
-     <input type="text" name="calories" placeholder="calories">
-     <input  type="button" value="Add" onClick="">
-  </form>
-  <br>
-  <form class="" action="index.html" method="post">
-     <input type="text" name="description" placeholder="description">
-     <input  type="button" value="Add" onClick="">
-  </form>
+<div class="jumbotron 2">
+  <div style="text-align:center">
+    <form class="" action="index.html" method="post">
+      <input type="text" name="food name" placeholder="food name">
+      <input  type="button" value="Add" onClick="">
+    </form>
+    <br>
+    <form class="" action="index.html" method="post">
+      <input type="text" name="calories" placeholder="calories">
+      <input type="button" value="Add" onClick="">
+    </form>
+    <br>
+    <form class="" action="index.html" method="post">
+     <!-- <input type="text" name="description" placeholder="description"> -->
+     <!-- <input  type="button" value="Add" onClick=""> -->
+    <textarea rows="4" cols="29" placeholder="description">
+    </textarea>
+
+    </form>
+    <br>
+     <input  type="button" value="Save" onClick="">
+  </div>
 </div>
 <!--End of body-->
+<div class="jumbotron">
+
+</div>
