--- a/src/app/edit-food/edit-food.component.html
+++ b/src/app/edit-food/edit-food.component.html
@@ -1,20 +1,19 @@
 <div *ngIf="childSelectedFood">
   <h3>Edit a Meal</h3>
   <div>
-    <label>Enter Meal Number:</label>
-    <input [(ngModel)]="childSelectedFood.id">
-  </div>
-  <div>
-    <label>Enter Type of Food:</label>
+    <label>Edit food name:</label>
     <input [(ngModel)]="childSelectedFood.name">
   </div>
+
   <div>
-    <label>Enter Food Details:</label>
-    <input [(ngModel)]="childSelectedFood.details">
-  </div>
-  <div>
-    <label>Enter Calorie Count:</label>
+    <label>Edit Calories Count:</label>
     <input [(ngModel)]="childSelectedFood.calories">
-    <button (click)="doneClicked()">Done</button>
+
   </div>
+  <div>
+    <label>Edit food description:</label>
+    <input [(ngModel)]="childSelectedFood.description">
+  </div>
+    <br>
+  <button (click)="doneClicked()">Done</button>
 </div>
