--- a/src/app/food-list/food-list.component.html
+++ b/src/app/food-list/food-list.component.html
@@ -1,7 +1,9 @@
 <h1></h1>
-<select>
-
-</select>
+  <select (change)="onChange($event.target.value)">
+    <option value="all" selected="selected">Show All</option>
+    <option value="under200">Under 200 Calories</option>
+    <option value="over200">Over 200 Calories</option>
+  </select>
 
 <div *ngFor="let currentFood of childFoodList | calories: selectedCalorieCount">
 
