--- a/src/app/food-list/food-list.component.html
+++ b/src/app/food-list/food-list.component.html
@@ -11,4 +11,5 @@
   <p>Calories: {{currentFood.calories}}</p>
   <p>Description: {{currentFood.description}}</p>
   <button (click)="editButtonClicked(currentFood)">Edit</button>
+  <button (click)="deleteFoodItem(currentFood)">Delete</button>
 </div>
